--- a/css/style.less
+++ b/css/style.less
@@ -18,12 +18,14 @@ body {
     color: #292929;
 }
 
+
+
 .main-logo-container {
     padding: 4rem;
     text-align: center;
 
     & img {
-        max-width: 300px;
+        max-width: 200px;
     }
 }
 
@@ -34,6 +36,13 @@ body {
         font-weight: 300;
         font-size: 1.5rem;
     }
+}
+
+.img-second-logo {
+    max-width: 200px;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 2rem;
 }
 
 .section-content {
@@ -47,16 +56,77 @@ body {
     & h4 {
         font-size: 1.4rem;
         margin-bottom: 1.2rem;
+        font-weight: 700;
     }
 
+    & img {
+        margin-bottom: 2rem;
+    }
+
+    & a {
+        color: #757575;
+    }
 }
 
 .section-logo {
     padding: 1rem;
 }
 
+.map-container {
+    position: relative;
+}
+
+.map-container .img-back-bg {
+    position: absolute;
+    top: -10vh;
+    right: 0;
+    max-width: 70%;
+}
+
+.map-container2 {
+    position: relative;
+}
+
+
+.map-container2 .img-back-bg {
+    position: absolute;
+    top: -15vh;
+    right: 0;
+    max-width: 60%;
+}
+
 #fullpage {
     div.section:nth-child(2n + 2) {
-        background: #f2f2f2;
+        background: #f8f9fb;
+    }
+}
+
+@media (max-width: 768px) {
+    .section-content {
+        padding: 0 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .map-container .img-back-bg {
+        position: unset;
+        top: 0;
+        right: 0;
+        max-width: 100%;
+    }
+
+    .section-content img {
+        margin: 0 auto;
+        display: block;
+        margin-bottom: 2rem;
+    }
+
+    .main-logo-container {
+        padding: 1rem;
+    }
+
+    .section-content h1 {
+        font-size: 1.1rem;
+        line-height: 2rem;
     }
 }
